--- a/frontend/source/components/ChartSalesPerformance/style.css
+++ b/frontend/source/components/ChartSalesPerformance/style.css
@@ -89,13 +89,13 @@
 }
 
 .stages {
-  margin-top: 2rem;
+  padding-top: 1rem;
   font-size: .75rem;
   color: #575757;
 }
 .stage {
   text-align: right;
-  margin: .5rem;
+  line-height: 1.4rem;
 }
 .stage_period {
   display: inline-block;
